<resources>
    <string name="app_name">Kalkulator</string>
    <string name="kalkulator_bidang_datar">Kalkulator Bidang Datar</string>
    <string name="panjang_alas_diameter">Panjang / Alas / Diameter</string>
    <string name="lebar_tinggi">Lebar / Tinggi</string>
    <string name="hitung">Hitung</string>
    <string name="luas">Luas</string>
    <string name="keliling">Keliling</string>
    <string name="persegi">PERSEGI</string>
    <string name="segitiga">SEGITIGA</string>
    <string name="lingkaran">LINGKARAN</string>
</resources>
